# pyatari

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
benchmarks/: bench_cpu.py  bench_input.py  bench_machine.py  bench_memory.py  bench_rendering.py  conftest.py  report.py
benchmarks/results/Linux-CPython-3.12-64bit/: 0001_baseline.json  0002_after-nop-optimizations.json  0003_after-gtia-optimizations.json  0004_after-pm-and-text-opts.json  0005_after-glyph-cache.json  0006_after-glyph-prefetch.json  0008_after-adr0006.json  (+1 more)
docs/adr/: 0001-real-rom-boot-without-synthetic-shell.md  0002-performance-benchmarking-and-hot-path-optimizations.md  0003-gtia-rendering-hot-path-optimizations.md  0004-player-missile-and-text-mode-rendering-optimizations.md  0005-text-mode-memory-access-optimizations.md  0006-pm-dirty-flags-fill-row-rom-check-pixel-cache.md  README.md
src/pyatari/: __init__.py  addressing.py  antic.py  audio.py  clock.py  constants.py  cpu.py  debugger.py  disassembler.py  display.py  frontend.py  gtia.py  machine.py  memory.py  opcodes.py  peripherals.py  pia.py  pokey.py  rom_loader.py  sio.py
tests/: conftest.py  test_antic.py  test_clock_machine.py  test_constants.py  test_cpu.py  test_cpu_addressing.py  test_cpu_execution.py  test_cpu_illegal.py  test_cpu_klaus.py  test_cpu_opcodes.py  test_debugger.py  test_disassembler.py  test_frontend.py  test_gtia.py  test_input_scrolling.py  test_integration.py  test_memory.py  test_peripherals.py  test_pia.py  test_pokey.py  test_sio.py
tools/: trace_rom_boot.py
