[project]
name = "pyatari"
version = "0.1.0"
description = "Educational Atari 800XL emulator in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
pyatari = "pyatari.machine:main"
dis6502 = "tools.dis6502:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyatari"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "slow: long-running validation tests such as the Klaus 6502 functional suite",
    "benchmark: performance benchmarks",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
